--- a/fase_3/css/main2.css
+++ b/fase_3/css/main2.css
@@ -1,3 +1,16 @@
 h1 {
     color: blue;
 }
+* {
+    margin: 0;
+    padding: 0;
+  }
+/* HEADER */
+.title h1 {
+
+    padding: 20px 0;
+    text-align: center;
+    font-size: 2.9em;
+    text-transform: uppercase;
+    
+}
