--- a/fase_3/css/main1.css
+++ b/fase_3/css/main1.css
@@ -1,4 +1,5 @@
 #menu{
+    grid-column: 1/4;
     background-color: #000;
  }
  #menu ul {
@@ -45,35 +46,37 @@ ul, ol {
     display: block;
     
 } 
-.container article{
-    background: #F2F3F4;
-    width: 90%;
-    max-width: 1000px;
-    margin: 1.6em auto;
+
+* {
+    box-sizing: border-box;
+}
+
+main {
     display: grid;
-    gap: 1.6em;
+    grid-template-columns: 35% 20% 40%;
+    gap: 0.5em;
+}
+section{
+    background: #F2F3F4;
     font-size: 20px;
-    grid-template-columns: repeat(2,1fr);
+    grid-column: 1/3;
 }
-.container > .header,
-.container > .content,
-.container > .sidebar,
-.container > .footer,
-.container > .div{
-    background: #fff;
-    padding: 20px;
-    border: 1px solid #000;
+
+header{
+        grid-column: 1/4;
+        background-color: rgb(95, 108, 109);
+        text-align: center;
 }
-    .container .header,
-    .container .footer {
-        grid-column: 1/2;
-        background: #1e272e;
+footer {
+        padding: 20px;
+        grid-column: 1/4;
+        background-color:  rgb(95, 108, 109);
         color: #fff;
-    }
-    .container .content {
-        grid-column: span 2;
-    }
-    .container .sidebar {
-        grid-column: span 2;
+        text-align: center;
+}
+aside {
+        grid-column: 3/4;
+        background: rgb(132, 209, 245);
+        text-align: center;
     }    
 
