--- a/fase_3/css/main2.css
+++ b/fase_3/css/main2.css
@@ -73,7 +73,7 @@ ul, ol {
 }
 .container .footer,
 .container .header{ 
- grid-column: span 3;
+ grid-column: 1/3;
  background: darkgrey;
  justify-content: center;
  align-items: center;
@@ -100,9 +100,11 @@ ul, ol {
     color:#f4f4f8;
 }
 .container > .sidebar{
+    grid-column: 2/3;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    background: rgb(213, 236, 213);
 }
 
